--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 # your domain
-baseURL = "https://paposeco.github.io/quietfoodie"
+baseURL = "https://ariefbuddies.github.io/foodie"
 # if your baseurl is the site root, set canonifyurls to false (example site is hosted on github pages)
 canonifyURLs = "true"
 languageCode = "en-us"
